--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% autoescape off %}
-{% blocktrans %}You're receiving this email because you requested a password reset
-for your user account at {{ site_name }}.{% endblocktrans %}
+{% blocktrans %}Вы получаете это письмо, потому что запросили сброс пароля
+для вашей учетной записи пользователя на {{ site_name }}.{% endblocktrans %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 
@@ -10,6 +10,6 @@ for your user account at {{ site_name }}.{% endblocktrans %}
 
 {% trans "Thanks for using our site!" %}
 
-{% blocktrans %}The {{ site_name }} team{% endblocktrans %}
+{% blocktrans %}Команда {{ site_name }} {% endblocktrans %}
 
 {% endautoescape %}
